--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,18 @@ sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
+
 }
 
+//bootJar{
+////	enabled = false
+//}
+jar{
+	manifest{
+		attributes 'Main-class' : 'JSleep'
+	}
+//	enabled = true
+}
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.code.gson:gson:2.8.6'
